# Plutus

./: .env.template  .gitignore  README.md  pyproject.toml
app/: __init__.py  accounting.py  adaptive_conviction.py  adaptive_sizing.py  ai_review.py  allocation_authority.py  approval_authority.py  approval_display.py  approval_parser.py  approval_workflow.py  broker_alpaca.py  broker_interface.py  canonical_sizing.py  capabilities.py  cash_manager.py  configuration.py  cross_asset_allocation.py  crypto_capabilities.py  crypto_market_data.py  crypto_proposals.py  crypto_research.py  crypto_risk.py  crypto_sizing.py  crypto_strategies.py  dynamic_universe.py  evidence.py  execution.py  execution_risk_snapshot.py  exit_blocker.py  features.py  fixed_point_accounting.py  formula_versions.py  health.py  internet.py  logging_config.py  loss_controls.py  lot_ledger.py  main.py  market_data.py  order_state.py  (+36 more)
config/: KILL_SWITCH.example  config.yaml  risk_limits.yaml  strategies.yaml
docs/: ABBV_EXIT_INCIDENT_2026-07-14.md  ALPACA_SETUP.md  AUDIT_REPORT.md  CONFIGURATION_AND_SIZING.md  CROSS_ASSET_ALLOCATION.md  CRYPTO_DATA_AND_BROKER_CAPABILITY.md  CRYPTO_SIZING_AND_RISK.md  CRYPTO_STRATEGIES_AND_PROPOSALS.md  FIXED_POINT_ACCOUNTING.md  GITHUB_WORKFLOW.md  LAUNCHD_SETUP.md  OPENAI_SETUP.md  OPERATIONS_MANUAL.md  PERFORMANCE_LAB_CLASSIFICATION.md  PHASE0_COMPLETION_EVIDENCE.md  PHASE0_RUNTIME_ISOLATION_EVIDENCE.md  PHASE0_RUNTIME_OPERATIONS.md  PHASE1_EVIDENCE_REPORT.md  PHASE1_RESEARCH_OPERATIONS.md  PHASE2_SHADOW_STRATEGIES.md  PHASE3_MODERATE_PAPER_RISK.md  SETUP.md  (+9 more)
(+142 files in other folders)
