[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
description = "Supervised, paper-only trading assistant"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.30",
  "openai>=1.40",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "openpyxl>=3.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
